mettre tout au singulier !

--- a/.htaccess
+++ b/.htaccess
@@ -1,29 +1,29 @@
 RewriteEngine On
 
-# ------------- Route Users -------------
-RewriteRule users/([0-9]+)$ users.php?id_users=$1 [L]
-RewriteRule users$ users.php [L]
+# ------------- Route User -------------
+RewriteRule user/([0-9]+)$ user.php?id_user=$1 [L]
+RewriteRule user$ users.php [L]
 
 # ------------- Route Session -------------
 RewriteRule session/([0-9]+)$ session.php?id_session=$1 [L]
 RewriteRule session$ session.php [L]
 
-# ------------- Route Métiers -------------
-RewriteRule metiers/([0-9]+)$ metiers.php?id_metiers=$1 [L]
-RewriteRule metiers$ metiers.php [L]
+# ------------- Route Métier -------------
+RewriteRule metier/([0-9]+)$ metier.php?id_metier=$1 [L]
+RewriteRule metier$ metiers.php [L]
 
-# ------------- Route Centres -------------
-RewriteRule centres/([0-9]+)$ centres.php?id_centres=$1 [L]
-RewriteRule centres$ centres.php [L]
+# ------------- Route Centre -------------
+RewriteRule centre/([0-9]+)$ centre.php?id_centre=$1 [L]
+RewriteRule centre$ centre.php [L]
 
-# ------------- Route Comportements -------------
-RewriteRule comportements/([0-9]+)$ comportements.php?id_comportements=$1 [L]
-RewriteRule comportements$ comportements.php [L]
+# ------------- Route Comportement -------------
+RewriteRule comportement/([0-9]+)$ comportement.php?id_comportement=$1 [L]
+RewriteRule comportement$ comportement.php [L]
 
-# ------------- Route savoirs -------------
-RewriteRule savoirs/([0-9]+)$ savoirs.php?id_savoirs=$1 [L]
-RewriteRule savoirs$ savoirs.php [L]
+# ------------- Route savoir -------------
+RewriteRule savoir/([0-9]+)$ savoir.php?id_savoir=$1 [L]
+RewriteRule savoir$ savoir.php [L]
 
-# ------------- Route inscriptions -------------
-RewriteRule inscriptions/([0-9]+)$ inscriptions.php?id_inscriptions=$1 [L]
-RewriteRule inscriptions$ inscriptions.php [L]
+# ------------- Route inscription -------------
+RewriteRule inscription/([0-9]+)$ inscription.php?id_inscription=$1 [L]
+RewriteRule inscription$ inscription.php [L]
